a1/brendan_gordon/TEST_PROGRAMS/invalidtype/ethan_macdonald/add_strings_ints.min
#Error: Can't add strings with ints
var x: float;
var s: string;

s = "Hello";
x = 5;
s = s + x;
